--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask==0.10.1
-Jinja2==2.7.3
-MarkupSafe==0.23
-Werkzeug==0.9.6
-itsdangerous==0.24
-pypng==0.0.17
-simplejson==3.6.0
-wsgiref==0.1.2
+Flask==2.2.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+Werkzeug==2.2.2
+itsdangerous==2.1.2
+pypng==0.20220715.0
+simplejson==3.17.6
+pyopenssl==22.0.0
